Settings in Japanese is 設定

--- a/languages/ja.json
+++ b/languages/ja.json
@@ -25,6 +25,7 @@
 		"back": "戻る",
 		"add": "追加",
 		"language": "言語",
+                "settings": "設定",
 		"theme": "テーマ",
 		"nightMode": "ナイトモード"
 	},
